# information-retrieval

./: .gitattributes  .gitignore  .gitmodules  Makefile  docker-compose.yml
doc/: report.tex
engine/: CMakeLists.txt
engine/data/: dict.opcorpora.xml  dict.opcorpora.xml.bz2  en_lemmas.txt  eng.txt  ru_lemmas.txt
engine/scripts/: build_dicts.py  show_stats.py
engine/src/: CMakeLists.txt  main.cpp
engine/src/engine/: CMakeLists.txt  engine.cpp  engine.h
engine/src/engine/indexing/: CMakeLists.txt  compressed_posting_list.cpp  compressed_posting_list.h  compressed_posting_list_test.cpp  inverted_index.cpp  inverted_index.h  posting_list.cpp  posting_list.h  posting_list_test.cpp  types.h
engine/src/engine/query/: CMakeLists.txt  ast.cpp  ast.h  bool_query.cpp  bool_query.h  bool_query_test.cpp  phrase_query.cpp  phrase_query.h  phrase_query_test.cpp  query.cpp  query.h  ranked_query.cpp  ranked_query.h  ranked_query_test.cpp
engine/src/linguistics/: CMakeLists.txt  preprocessor.cpp  preprocessor.h  utils.cpp  utils.h
engine/src/linguistics/lemmatization/: CMakeLists.txt  dict_lemmatizer.cpp  dict_lemmatizer.h  lemmatizer.h  mock_lemmatizer.cpp  mock_lemmatizer.h  stemming.cpp  stemming.h  stemming_test.cpp
engine/src/linguistics/tokenization/: CMakeLists.txt  tokenizer.h  tokenizer_impl.cpp  tokenizer_impl.h  (+1 more)
engine/src/storage/: CMakeLists.txt  doc_storage.h  document.h  file_index_storage.cpp  file_index_storage.h  index_storage.h  mongo_doc_storage.cpp  mongo_doc_storage.h  mongo_storage.cpp  mongo_storage.h  storage.h
engine/src/utils/: hash_table.h
(+23 files in other folders)
